2023-07-28 eslint, babel, prettier 설정 전 기본 세팅

--- a/alecture/index.html
+++ b/alecture/index.html
@@ -29,8 +29,8 @@
   </head>
   <body>
     <div id="app">
-
     </div>
     <script src="/dist/app.js"></script>
+    <!--   리액트 소스코드 불러오기-->
   </body>
 </html>
